--- a/index.html
+++ b/index.html
@@ -8,11 +8,43 @@
 </head>
 <body>
     <div class="container">
-        <header class="header">
+        <!-- Landing Page -->
+        <div id="landingPage" class="landing-page">
+            <div class="landing-content">
+                <div class="landing-hero">
+                    <h1 class="landing-title">Attendance Tracker</h1>
+                    <p class="landing-subtitle">Track your class attendance and stay above the 75% requirement</p>
+                    <div class="landing-features">
+                        <div class="feature-item">
+                            <h3>Real-time Tracking</h3>
+                            <p>Monitor your attendance across all subjects in one dashboard</p>
+                        </div>
+                        <div class="feature-item">
+                            <h3>Smart Alerts</h3>
+                            <p>Get warnings when you're approaching the danger zone</p>
+                        </div>
+                        <div class="feature-item">
+                            <h3>Progress Analytics</h3>
+                            <p>See exactly how many classes you can afford to miss</p>
+                        </div>
+                    </div>
+                    <button class="btn btn-primary btn-large" onclick="showLogin()">Get Started</button>
+                </div>
+            </div>
+        </div>
+
+        <!-- App Header (shown when logged in) -->
+        <header class="header" id="appHeader" style="display: none;">
             <div class="header-content">
-                <div>
-                    <h1 class="header-title">Attendance Dashboard</h1>
-                    <p class="header-subtitle">Stay on track with your 75% attendance requirement</p>
+                <div class="header-main">
+                    <div>
+                        <h1 class="header-title">Attendance Dashboard</h1>
+                        <p class="header-subtitle">Stay on track with your 75% attendance requirement</p>
+                    </div>
+                    <div class="header-actions">
+                        <span class="user-email" id="userEmail"></span>
+                        <button class="btn btn-ghost btn-small" onclick="logoutUser()">Logout</button>
+                    </div>
                 </div>
             </div>
             
