update header to display user name and enhance stats section visibility

--- a/index.html
+++ b/index.html
@@ -78,12 +78,15 @@
                         <p class="header-subtitle">Stay on track with your 75% attendance requirement</p>
                     </div>
                     <div class="header-actions">
-                        <span class="user-email" id="userEmail"></span>
-                        <button class="btn btn-ghost btn-small" onclick="logoutUser()">Logout</button>
+                        <span class="user-name" id="userName"></span>
+                        <button class="btn btn-ghost btn-small" onclick="logoutUser()">LOGOUT</button>
                     </div>
                 </div>
             </div>
-            
+        </header>
+
+        <!-- Stats Section -->
+        <div id="statsSection" class="stats-section" style="display: none;">
             <div class="stats-grid">
                 <div class="stat-card">
                     <div class="stat-content">
@@ -110,7 +113,7 @@
                     </div>
                 </div>
             </div>
-        </header>
+        </div>
 
         <!-- Subject Setup Section -->
         <div id="subjectSetupSection" class="setup-section" style="display: none;">
