update contact link to redirect to SandPark website and set default font family to Space Grotesk

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </div>
                 </div>
                 <div class="contact-info">
-                    <a href="mailto:anil@sandpark.co">anil@sandpark.co</a>
+                    <a href="https://sandpark.co" target="_blank">SandPark</a>
                 </div>
             </div>
         </div>
